--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,13 @@ Package: fuzzymatch
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
+Author: Richard Vogg
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Allows you to remove inexact matches (e.g. Rstudio, RStudio, Rstduio) from a vector.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Imports: 
+  dplyr,
+  plyr,
+  stringdist
