--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: fuzzymatch
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Detects and replaces inexact string matches.
 Version: 0.1.0
 Author: Richard Vogg
-Maintainer: The package maintainer <yourself@somewhere.net>
 Description: Allows you to remove inexact matches (e.g. Rstudio, RStudio, Rstduio) from a vector.
-License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Depends:
+  dplyr
 Imports: 
-  dplyr,
   plyr,
   stringdist
